--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    
-    <p><h1><a href="1GFG.pdf">1</a></h1></p>
+    <p><h1><a href="GFG.jpg">1</a></h1></p>
     <p><h1><a href="2microsoftInCode.jpg">2</a></h1></p>
     <p><h1><a href="3digitalLiteracy.jpg">3</a></h1></p>
     <p><h1><a href="4STD 9.jpg">4</a></h1></p>
